--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -47,5 +47,6 @@ input {
   text-align: center;
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
